# waves

./: Cargo.toml  diagram.json  wokwi.toml
.cargo/: config.toml
scripts/: flash.sh
src/: main.rs
